# Carrier-Owl

./: .gitignore  config.yaml  pyproject.toml
.github/workflows/: cron.yml  deploy.yml  setup.yml
scripts/: category_taxonomy.txt  get_taxonomy.py  slack_event_reaction_added.json  slack_url_verification.json
src/: __main__.py  carrier_owl.py  config.py  main.py  my_types.py  notify.py  owl.py  requirements.txt  search.py  translate.py
src/arxiv/: __init__.py  common.py  format.py  retrieve.py  search.py
src/llm/: loader.py  summarize.py
src/my_arxiv/: format.py  search.py
src/my_deepl/: __init__.py
src/my_llm/: common.py
src/my_packages/: config.py
src/my_packages/arxiv/: __init__.py  search.py
src/my_packages/deepl/: translate.py
src/my_packages/llm/: __init__.py
src/my_packages/my_types/: my_types.py  slack_event_reaction_added.py  slack_url_verification.py
src/my_packages/slack/: __init__.py  notify.py
src/my_types/: __init__.py  my_types.py  slack_event_reaction_added.py
src/slack/: handle_text.py  notify.py  reply.py
