[tool.poetry]
name = "carrier-owl"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
wheel = "^0.38.1"
slackweb = "^1.0.5"
lxml = "4.9.4"
pyyaml = "5.3.1"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
webdriver-manager = "^3.3.0"
arxiv = "^0.5.3"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240406"
types-beautifulsoup4 = "^4.12.0.20240229"
types-pyyaml = "^6.0.12.20240311"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.taskipy.tasks]
# poetry run task start
start = "python -m src"

# poetry run task tax
tax = "python scripts/get_taxonomy.py"

[[tool.mypy.overrides]]
module = "arxiv.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slackweb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "selenium.*" 
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "webdriver_manager.*"
ignore_missing_imports = true
