[tool.poetry]
name = "carrier-owl"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
wheel = "^0.38.1"
lxml = "4.9.4"
beautifulsoup4 = "^4.9.3"
arxiv = "^2.1.0"
python-dotenv = "^1.0.1"
slack-sdk = "^3.27.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240406"
types-beautifulsoup4 = "^4.12.0.20240229"
taskipy = "^1.12.2"
datamodel-code-generator = "^0.25.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.taskipy.tasks]
# poetry run task start
start = "python -m src"

# poetry run task tax
tax = "python scripts/get_taxonomy.py"
# poetry run task schema
schema = "datamodel-codegen --input scripts/slack_event_reaction_added.json --input-file-type json --output src/my_types/slack_event_reaction_added.py --output-model-type typing.TypedDict"

[[tool.mypy.overrides]]
module = "arxiv.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slackweb.*"
ignore_missing_imports = true
